projects/style.css
@import url('https://fonts.cdnfonts.com/css/helvetica-neue-5');

@media only screen and (min-width: 900px) {
  body {
    width: 100% !important;
    max-width: 100vw !important;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
    background-color: #1a448b !important;
    color: #FFFFFF !important;
    text-align: center;
  }
  
  .projbutton {
    font-size: 3vh;
  }

  .btn {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
    font-weight: 500 !important;
    color: #FFFFFF !important;
    background-color: #1a448b !important;
    border-color: #FFFFFF !important;
    padding: 1.66vh 1.66vw;
    border-width: 3px !important;
    box-shadow: 5px 5px 5px #000000 !important;
  }

  .btn:hover {
    box-shadow: 0 0 0 #000000 !important;
  }

  .title {
    padding-top: 2vh !important;
    font-size: 8vh !important;
    font-weight: 600 !important;
  }

  a {
    color: #FFFFFF !important;
  }

  .row {
    display: flex;
    justify-content: space-around !important;
    padding-bottom: 1vh !important;
    padding-top: 1vh !important;
  }

  .colproject {
    width: 25vw !important;
  }

  .projimage {
    width: 20vw !important;
    box-shadow: 5px 5px 5px #000000;
  }

  .header {
    font-size: 4vh !important;
    font-weight: 600 !important;
  }

  .line {
    width: 70% !important;
    height: 6px !important;
    color: #1a448b !important;
    border-radius: 3px;
    border-color: #FFFFFF;
    border-style: solid;
    border-width: 2px;
  }

  .container {
    padding: 2vh !important;
  }
}

@media only screen and (max-width: 899px) {
  body {
    width: 100% !important;
    max-width: 100vw !important;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
    background-color: #1a448b !important;
    color: #FFFFFF !important;
    text-align: center;
  }
  
  .projbutton {
    font-size: 3vh;
  }

  .btn {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
    font-weight: 500 !important;
    color: #FFFFFF !important;
    background-color: #1a448b !important;
    border-color: #FFFFFF !important;
    padding: 1.66vh 1.66vw;
    border-width: 3px !important;
    box-shadow: 5px 5px 5px #000000 !important;
  }

  .btn:hover {
    box-shadow: 0 0 0 #000000 !important;
  }

  .title {
    padding-top: 1vh !important;
    padding-bottom: 1vh !important;
    font-size: 5.5vh !important;
    font-weight: 600 !important;
  }

  a {
    color: #FFFFFF !important;
  }

  .row {
    min-width: 100% !important;
    display: flex;
    justify-content: space-around !important;
    flex-wrap: wrap !important;
    padding-bottom: 1vh !important;
    padding-top: 1vh !important;
  }

  .colproject {
    width: 100vw !important;
  }

  .projimage {
    width: 60% !important;
    box-shadow: 5px 5px 5px #000000;
  }

  .header {
    font-size: 3.5vh !important;
    font-weight: 600 !important;
  }

  .line {
    width: 70% !important;
    height: 6px !important;
    color: #1a448b !important;
    border-radius: 3px;
    border-color: #FFFFFF;
    border-style: solid;
    border-width: 2px;
  }

  .container {
    padding: 2vh !important;
  }
}

